# ai_hal

./: README.md  pyproject.toml  report.md
output/: answer.txt
src/ai_hal/: crew.py  main.py
src/ai_hal/config/: agents.yaml  tasks.yaml
