[project]
name = "ai_hal"
version = "0.1.0"
description = "ai-hal using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.10.1",
]

[project.scripts]
ai_hal = "ai_hal.main:run"
run_crew = "ai_hal.main:run"
train = "ai_hal.main:train"
replay = "ai_hal.main:replay"
test = "ai_hal.main:test"
run_with_trigger = "ai_hal.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
